builder/k8s/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: builder-service
spec:
  selector:
    app: jenkins
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: LoadBalancer
