builder/k8s/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: builder-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: builder
  defaultBackend:
    service:
      name: builder-service
      port:
        number: 80
  rules:
  - host: builder.localhost.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: builder-service
            port:
              number: 80
